Game_of_pods/iron galary/iron_db_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-db

spec:
  replicas: 1
  selector:
    matchLabels:
      db: mariadb
  template:
    metadata:
      name: iron-db
      labels:
        db: mariadb
    spec:
      containers:
        - name: iron-db
          image: kodekloud/irondb:2.0
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db
      volumes:
        - name: db
          emptyDir: { }
