Game_of_pods/iron galary/iron_db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-db-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 3306
      port: 3306
  selector:
    db: mariadb
