Game_of_pods/iron galary/iron_gallery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-gallery-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    run: iron-gallery
